package com.example.sickar3;

public class Constants {
    // number of item to hold in BarcodeData cache and RecyclerView adapter
    public static final int CACHE_SIZE = 10;
}
