@startuml

title __APP's Class Diagram__\n

  namespace com.example.sickar {
    class com.example.sickar.BuildConfig {
    }
  }
  

  namespace com.example.sickar {
    class com.example.sickar.Constants {
    }
  }
  

  namespace com.example.sickar {
    class com.example.sickar.Utils {
    }
  }
  

  namespace com.example.sickar {
    namespace image {
      class com.example.sickar.image.ImageActivity {
      }
    }
  }
  

  namespace com.example.sickar {
    namespace image {
      class com.example.sickar.image.ImageSystemPageFragment {
      }
    }
  }
  

  namespace com.example.sickar {
    namespace libs {
      class com.example.sickar.libs.EnhancedWrapContentViewPager {
      }
    }
  }
  

  namespace com.example.sickar {
    namespace libs {
      class com.example.sickar.libs.OnSwipeListener {
      }
    }
  }
  

  namespace com.example.sickar {
    namespace libs {
      class com.example.sickar.libs.ScaleGestureListener {
      }
    }
  }
  

  namespace com.example.sickar {
    namespace libs {
      class com.example.sickar.libs.SelfOrientingNode {
      }
    }
  }
  

  namespace com.example.sickar {
    namespace libs {
      class com.example.sickar.libs.SwipeDisabledViewPager {
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      class com.example.sickar.main.DataViewModel {
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      class com.example.sickar.main.MainActivity {
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      namespace adapters {
        class com.example.sickar.main.adapters.ItemRecyclerViewAdapter {
        }
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      namespace adapters {
        class com.example.sickar.main.adapters.SystemsPagerAdapter {
        }
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      namespace helpers {
        class com.example.sickar.main.helpers.ARScene {
        }
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      namespace helpers {
        class com.example.sickar.main.helpers.BarcodeDataCache {
        }
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      namespace helpers {
        class com.example.sickar.main.helpers.BarcodeProcessor {
        }
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      namespace helpers {
        class com.example.sickar.main.helpers.GraphicOverlay {
        }
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      namespace helpers {
        class com.example.sickar.main.helpers.Item {
        }
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      namespace helpers {
        class com.example.sickar.main.helpers.ItemTouchHelperCallback {
        }
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      namespace helpers {
        class com.example.sickar.main.helpers.NetworkRequest {
        }
      }
    }
  }
  

  namespace com.example.sickar {
    namespace main {
      namespace helpers {
        class com.example.sickar.main.helpers.SystemPageFragment {
        }
      }
    }
  }
  

  namespace com.example.sickar {
    namespace tutorial {
      class com.example.sickar.tutorial.TutorialActivity {
      }
    }
  }
  

  namespace com.example.sickar {
    namespace tutorial {
      class com.example.sickar.tutorial.TutorialPage {
      }
    }
  }
  

  namespace com.example.sickar {
    namespace tutorial {
      class com.example.sickar.tutorial.TutorialPageLast {
      }
    }
  }
  

  namespace com.example.sickar {
    namespace tutorial {
      class com.example.sickar.tutorial.TutorialPagerAdapter {
      }
    }
  }
  

  com.example.sickar.image.ImageActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.sickar.image.ImageActivity o-- com.example.sickar.main.helpers.Item : item
  com.example.sickar.image.ImageActivity o-- com.example.sickar.main.DataViewModel : viewModel
  com.example.sickar.image.ImageSystemPageFragment -up-|> androidx.fragment.app.Fragment
  com.example.sickar.libs.EnhancedWrapContentViewPager -up-|> androidx.viewpager.widget.ViewPager
  com.example.sickar.libs.OnSwipeListener -up-|> android.view.GestureDetector.SimpleOnGestureListener
  com.example.sickar.libs.ScaleGestureListener -up-|> android.view.ScaleGestureDetector.SimpleOnScaleGestureListener
  com.example.sickar.libs.SelfOrientingNode -up-|> com.google.ar.sceneform.Node
  com.example.sickar.libs.SwipeDisabledViewPager -up-|> androidx.viewpager.widget.ViewPager
  com.example.sickar.main.DataViewModel -up-|> androidx.lifecycle.AndroidViewModel
  com.example.sickar.main.DataViewModel o-- com.example.sickar.main.helpers.BarcodeDataCache : barcodeDataCache
  com.example.sickar.main.DataViewModel o-- com.example.sickar.main.helpers.NetworkRequest : networkRequest
  com.example.sickar.main.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.sickar.main.MainActivity o-- com.example.sickar.main.helpers.ARScene : arScene
  com.example.sickar.main.MainActivity o-- com.example.sickar.main.helpers.BarcodeProcessor : barcodeProcessor
  com.example.sickar.main.MainActivity o-- com.example.sickar.main.helpers.GraphicOverlay : graphicOverlay
  com.example.sickar.main.MainActivity o-- com.example.sickar.main.adapters.ItemRecyclerViewAdapter : recyclerViewAdapter
  com.example.sickar.main.MainActivity o-- com.example.sickar.main.DataViewModel : viewModel
  com.example.sickar.main.adapters.ItemRecyclerViewAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.sickar.main.adapters.SystemsPagerAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter
  com.example.sickar.main.helpers.ARScene o-- com.example.sickar.main.MainActivity : mainActivity
  com.example.sickar.main.helpers.BarcodeProcessor o-- com.example.sickar.main.helpers.GraphicOverlay : overlay
  com.example.sickar.main.helpers.GraphicOverlay -up-|> android.view.View
  com.example.sickar.main.helpers.ItemTouchHelperCallback -up-|> androidx.recyclerview.widget.ItemTouchHelper.Callback
  com.example.sickar.main.helpers.ItemTouchHelperCallback o-- com.example.sickar.main.adapters.ItemRecyclerViewAdapter : adapter
  com.example.sickar.main.helpers.NetworkRequest o-- com.example.sickar.main.DataViewModel : model
  com.example.sickar.main.helpers.SystemPageFragment -up-|> androidx.fragment.app.Fragment
  com.example.sickar.tutorial.TutorialActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.sickar.tutorial.TutorialPage -up-|> androidx.fragment.app.Fragment
  com.example.sickar.tutorial.TutorialPageLast -up-|> androidx.fragment.app.Fragment
  com.example.sickar.tutorial.TutorialPagerAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
